--- a/app/views/deals/all_deals.html.erb
+++ b/app/views/deals/all_deals.html.erb
@@ -107,7 +107,8 @@
         <div id="tab-content-3" class="tab-content">
           <div class="for_sns">
             <% @blog_deals.each do |hotdeal| %>
-              
+              <% if hotdeal.h_spare_13.present? %>
+              <% hotdeal.h_spare_13 %>
                 <div class="wrapping">
                  <div><p class="title"><%= hotdeal.h_title %></p></div>
                  <div class="image"><img src="<%= hotdeal.h_image %>"></div>
@@ -140,7 +141,7 @@
                  </div><!--./info-->
                 </div><!--./wrapping-->
                 <hr>
-              
+              <% end %>
             <% end %>
           </div><!--./for_sns-->
         </div><!--#/tab-content-3-->
