--- a/app/views/hotdeals/edit.html.erb
+++ b/app/views/hotdeals/edit.html.erb
@@ -13,7 +13,8 @@
         <%= f.select :h_spare_07, ([["In Stock", ""], "Only in a few stock left"])%>
         <%= f.select :h_spare_10, ([["Subscribe & Save?", ""], "Yes"])%>
         <%= f.select :h_spare_12, ([["No Tax?", ""], "Yes"])%>
-        <%= f.select :h_spare_13, ([["Write Blog?", ""], "Yes"])%><br /><br />
+        <%= f.select :h_spare_13, ([["Write Blog?", ""], "Yes"])%>
+        <div class="form_btn"><%= f.button :submit %></div><br />
         <%= f.input :h_image, label: 'Image URL' %>
         <%= f.input :h_link, label: 'Product URL' %>
         <%= f.input :h_title , label: 'Title Of Product' %>
