--- a/app/views/deals/all_deals.html.erb
+++ b/app/views/deals/all_deals.html.erb
@@ -106,9 +106,9 @@
         </div><!--#/tab-content-2-->
 
         <div id="tab-content-3" class="tab-content">
-                    <div class="for_sns">
+           <div class="for_sns">
             <% @blog_deals.each do |hotdeal| %>
-              
+              <% if hotdeal.h_spare_13.present? %>
               
                 <div class="wrapping">
                  <div><p class="title"><%= hotdeal.h_title %></p></div>
@@ -142,7 +142,7 @@
                  </div><!--./info-->
                 </div><!--./wrapping-->
                 <hr>
-              
+              <% end %>
             <% end %>
 
           </div><!--./for_sns-->
