--- a/app/views/deals/_body_promotions.html.erb
+++ b/app/views/deals/_body_promotions.html.erb
@@ -11,7 +11,7 @@
 
  <!-- Categories : coupons, sales, promotions, brands -->
  <div class="filter-node promotion_box" data-filter='["sales","Amazon Gold Box and Lightning Deals"]'>
-  <a target="_blank" href="https://amzn.to/2Lw8uy8"><img src="https://live.staticflickr.com/7297/27443174192_885278e512_b.jpg" alt="Gold Box Deals"></a>
+  <!-- <a target="_blank" href="https://amzn.to/2Lw8uy8"><img src="https://live.staticflickr.com/7297/27443174192_885278e512_b.jpg" alt="Gold Box Deals"></a> -->
   <div class="node-box inner">
     <h2><a target="_blank" href="https://amzn.to/2Lw8uy8">Amazon Gold Box and Lightning Deals</a></h2>
     <p>If you are looking for good Amazon deals and bargains, Today’s Deals is the place to come. </p>
