--- a/app/views/hotdeals/edit.html.erb
+++ b/app/views/hotdeals/edit.html.erb
@@ -36,12 +36,14 @@
           <%= f.input :h_spare_08, label: 'Average Rate' %>
           <%= f.input :h_spare_09, label: 'Number of Reviews' %>
           <%= f.input :h_spare_02, label: 'Coupon Deals?' %>
-          <%= f.input :h_spare_01, label: 'Extra Deals?' %>
-          <%= f.input :h_list_price, label: '(Old)List Price' %>
-          <%= f.input :h_price, label: '(Old)Current Price' %>
+          <!-- <%= f.input :h_spare_01, label: 'Extra Deals?' %> -->
+          <!--<%= f.input :h_list_price, label: '(Old)List Price' %>
+          <%= f.input :h_price, label: '(Old)Current Price' %>-->
         </div>
-        <%= f.input :h_spare_14, label: 'Amazon Choice' %>
-        <%= f.input :h_spare_15, label: 'Amazon Choice Link' %>
+        <div class="find_more">
+          <%= f.input :h_spare_14, label: 'Amazon Choice' %>
+          <%= f.input :h_spare_15, label: 'Amazon Choice Link' %>
+        </div>
         <%= f.input :h_description, label: 'Description Of Product' %>
         <%= f.input :h_spare_21, as: :trix_editor, label: 'Description Of Product with TRIX' %>
 
