--- a/app/views/hotdeals/show.html.erb
+++ b/app/views/hotdeals/show.html.erb
@@ -29,6 +29,7 @@
               <%= @hotdeal.impressionist_count(:filter=>:all) %> Views |
               <%= @hotdeal.created_at.strftime("%d. %B.") %><br />
               <div class="sharing">
+                <p>Available On Amazon Now</p>
                 <p><%= @hotdeal.h_title %></p>
                 <% if @hotdeal.h_spare_42.present? %>
                   <p class="h_price"><%= number_to_currency(@hotdeal.h_spare_42) %> <span class="span_01">( Was: <%= number_to_currency(@hotdeal.h_spare_41) %></span><span class="span_02"> | <%= number_to_percentage(@hotdeal.h_percentage, precision: 0) %> OFF )</span></p>
