--- a/app/views/promocodes/_form.html.erb
+++ b/app/views/promocodes/_form.html.erb
@@ -32,8 +32,10 @@
     </div>
     <%= f.input :p_spare_50, label: 'Expired Date' %><br />
     <%= f.input :p_spare_51, label: 'Ends Today' %><br />
-    <%= f.input :p_spare_07, label: 'Amazon Choice' %>
-    <%= f.input :p_spare_08, label: 'Amazon Choice Link' %>
+    <div class="find_more">
+      <%= f.input :p_spare_07, label: 'Amazon Choice' %>
+      <%= f.input :p_spare_08, label: 'Amazon Choice Link' %>
+    </div>
     <%= f.input :p_description, label: 'Description Of Product' %>
     <%= f.input :p_spare_36, as: :trix_editor, label: 'Description Of Product with TRIX' %>    
 
