--- a/app/views/storepromotions/_form.html.erb
+++ b/app/views/storepromotions/_form.html.erb
@@ -16,6 +16,7 @@
         <%= f.input :sp_percentage_02, label: 'Percentage' %>
       </div>
       <div class="pricing clearfix">
+        <p>If you don't know "Percentage"</p>
         <%= f.input :sp_spare_42, label: 'List Price' %>
         <%= f.input :sp_spare_43, label: 'Current Price' %>
       </div>
