--- a/app/views/storepromotions/show.html.erb
+++ b/app/views/storepromotions/show.html.erb
@@ -9,7 +9,7 @@
         
         <!-- <p>Location Map</p> -->
         <div class="show_img hotdeal_img">
-          <div class="img_box store_promotion">
+          <div class="store_imgbox store_promotion">
             <img src="<%= @storepromotion.sp_image %>"> 
           </div>
           <% if can? :update, @storepromotion %>
