--- a/app/views/storepromotions/show.html.erb
+++ b/app/views/storepromotions/show.html.erb
@@ -25,7 +25,7 @@
          <div class="hotdeal_inner">
            <% if @storepromotion.sp_spare_40.present? || @storepromotion.sp_spare_42.present?%>
            <% else %>
-            <p><%= @storepromotion.sp_store_name %> | Up to <%= number_to_percentage(@storepromotion.sp_percentage_01, precision: 0) %> OFF</p>
+            <p><%= @storepromotion.sp_store_name %> <% if @storepromotion.sp_percentage_01.present? %>| Up to <%= number_to_percentage(@storepromotion.sp_percentage_01, precision: 0) %> OFF<% end %></p>
            <% end %>
            <h2><%= @storepromotion.sp_title %></h2>
 
@@ -41,7 +41,7 @@
 
            <div class="store_info">
             <% if @storepromotion.sp_promocode.present? %>
-              <em>* Enter the promotional code "<span><%= @storepromotion.sp_promocode %></span>" at checkout to receive your savings.</em>
+              <em>* Enter this <%= @storepromotion.sp_store_name %> promo code "<span><%= @storepromotion.sp_promocode %></span>" at checkout to receive your savings.</em>
             <% end %>
            </div>
            <% if @storepromotion.sp_description.present? %>
@@ -66,7 +66,7 @@
                       <% end %>
                     </em>
                   </div> 
-                  <div class="text_copied intheshow">
+                  <div class="text_copied intheshow_store">
                     <div class="container"><div class="wrap"><div class="box"><p data-copy-text=""><%= @storepromotion.sp_promocode %></p></div></div></div>
                   </div>
                 <% else %>
@@ -86,7 +86,7 @@
                   </div>
                 <% end %>
               <% else %>
-                <div class="text_copied intheshow">
+                <div class="text_copied intheshow_store">
                   <div class="container"><div class="wrap"><div class="box"><p data-copy-text=""><%= @storepromotion.sp_promocode %></p></div></div></div>
                 </div>
               <% end %>
@@ -94,7 +94,7 @@
             </div>
 
             <div class="btn">
-            <a class="m_btn p_btn" target="_blank" href="<%= @storepromotion.sp_link %>">Check it out on &ensp;<em><%= @storepromotion.sp_store_name %></em></a>
+            <a class="m_btn p_btn store_btn" target="_blank" href="<%= @storepromotion.sp_link %>">Check it out on &ensp;<em><%= @storepromotion.sp_store_name %></em></a>
       
          </div>
         </div>
