--- a/app/assets/stylesheets/gadgets.css
+++ b/app/assets/stylesheets/gadgets.css
@@ -172,6 +172,7 @@
   .show_wrap .show_box_down{width:100%;margin:0;}
   .show_wrap .show_box_down .sbd_box{float:left;width:48%;margin:2% 1%;}
   .show_wrap .show_box_down .sbd_box .down_img{height:175px;}
+  .show_wrap .show_box .show_img .store_imgbox img{transform:translate(-25%, -50%);}
 }
 
 @media screen and (min-width:681px) and (max-width:1199px){
