--- a/app/views/promocodes/show.html.erb
+++ b/app/views/promocodes/show.html.erb
@@ -159,6 +159,8 @@
   </div><!--./show_wrap-->
 </div><!--./layout-->
 <script><%= render(:partial => 'promocode', :handlers => [:erb], :formats => [:js]) %></script>
+
+<!-- Translate -->
 <script type="text/javascript">
   // WORK IN PROGRESS BELOW
         
