--- a/app/views/storepromotions/_storepromotions.js.erb
+++ b/app/views/storepromotions/_storepromotions.js.erb
@@ -83,3 +83,9 @@
     }
   }
   //End
+
+// Show orLess More
+$('.show-btn').click(function() {
+  $('.trix-container').toggleClass("show");
+  $(this).toggleClass("rotate");
+});
