--- a/app/assets/stylesheets/hotdeals.css
+++ b/app/assets/stylesheets/hotdeals.css
@@ -16,6 +16,8 @@
 .show_wrap .show_box .show_inner .hotdeal_inner .top_line{}
 .show_wrap .show_box .show_inner .hotdeal_inner .top_line span{text-overflow:ellipsis;white-space:nowrap;word-wrap:normal;width:300px;overflow:hidden;display:inline-block;vertical-align:middle;font-weight:500;}
 .show_wrap .show_box .show_inner .hotdeal_inner .top_line em{font-weight:500;}
+.show_wrap .show_box .show_inner .hotdeal_inner p.store_p{font-size:15px;margin:0;}
+.show_wrap .show_box .show_inner .hotdeal_inner h2.store_h2{font-size:20px;}
 .show_wrap .show_box .show_inner .hotdeal_inner .h_price{font-size:25px;margin-bottom:0;}
 .show_wrap .show_box .show_inner .hotdeal_inner .h_price .span_01{color:#616161;text-decoration:line-through;font-size:20px;}
 .show_wrap .show_box .show_inner .hotdeal_inner .h_price .span_02{margin-left:10px;font-size:20px;}
@@ -40,8 +42,8 @@
 .show_wrap .show_box .show_inner .hotdeal_inner .btn a{}
 .show_wrap .show_box .show_inner .hotdeal_inner .btn a em{font-weight:bold;font-size:15px;}
 .show_wrap .show_box .show_inner .hotdeal_inner p.sp_des{margin:0;}
-.show_wrap .show_box .show_inner .hotdeal_inner .store_info{margin-top:10px;line-height:1.1;}
-.show_wrap .show_box .show_inner .hotdeal_inner .store_info em{color:#616161;font-size:12.5px;}
+.show_wrap .show_box .show_inner .hotdeal_inner .store_info{margin-top:10px;}
+.show_wrap .show_box .show_inner .hotdeal_inner .store_info em{color:#616161;font-size:12.5px;display:block;margin-bottom:7px;}
 .show_wrap .show_box .show_inner .hotdeal_inner .store_info em span{text-transform:uppercase;font-weight:bold;}
 /*.show_wrap .show_box .hotdeal_img{position:relative;}*/
 .trix-container{max-height:250px;overflow:hidden;transition:max-height .5s ease;position:relative;}
