--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -214,8 +214,9 @@ header .gnb_m,header .gnb_open2{display:none;}
 .deals_main_menu{margin-top:60px;}
 .deals_main_menu ul{font-family: 'Righteous', cursive;}
 .deals_main_menu ul li{float:left;margin-right:20px;position:relative;}
-.deals_main_menu ul li a{text-decoration:none;font-size:70px;color:#000;}
-.deals_main_menu ul li a:after{position:absolute;height:10px;content:'';background:#000;width:110%;top:69.2%;margin-left:10px;-webkit-transform:translateY(-5px);transform:translateY(-5px);}
+.deals_main_menu ul li a{text-decoration:none;font-size:55px;color:#000;}
+.deals_main_menu ul li a:hover{border-bottom:3px solid;}
+/*.deals_main_menu ul li a:after{position:absolute;height:10px;content:'';background:#000;width:110%;top:69.2%;margin-left:10px;-webkit-transform:translateY(-5px);transform:translateY(-5px);}*/
 /*.deals_main_menu ul li.nth_1:after{}*/
 
 
