--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -17,7 +17,9 @@
 .gadgets .card_wrap .card-body .btn .learnmore{background:#000;color:#fff;padding:3px 20px;}
 .gadgets .card_wrap .card-body .admin{margin-top:-15px;}
 .gadgets .card_wrap .card-body .admin>em>a{text-decoration:none;color:#fff;}
-.gadgets .card_wrap .card-header img{display:block;width:100%;margin:0 auto;border-radius:10px;}
+.gadgets .card_wrap .card-header{} 
+.gadgets .card_wrap .card-header .home_img{width:350px;height:350px;}
+.gadgets .card_wrap .card-header .home_img img{display:block;width:100%;height:100%;margin:0 auto;border-radius:10px;object-fit:contain;}
 .gadgets .card_wrap .with-photo/*do not delete*/
 .gadgets .card_wrap .card-header{height:208px;padding:0;overflow:hidden;}
 .gadgets .card_wrap .start{position:absolute;top:-45px;right:20px;}
