--- a/app/views/home/_gadget.html.erb
+++ b/app/views/home/_gadget.html.erb
@@ -2,7 +2,9 @@
   <% @gadgets.each do |gadget| %>
     <div class="card with-photo">
       <div class="card-header">
-       <a target="_blank" href="<%= gadget.gg_url %>"><img src="<%= gadget.gg_img %>" alt="<%= gadget.gg_title %>" title="<%= gadget.gg_spare_05 %>"></a>
+        <div class="home_img">
+          <a target="_blank" href="<%= gadget.gg_url %>"><img src="<%= gadget.gg_img %>" alt="<%= gadget.gg_title %>" title="<%= gadget.gg_spare_05 %>"></a>
+        </div>
       </div>
       
       <section class="card-body">
