--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -19,7 +19,9 @@
           <% @gadgets.each do |gadget| %>
             <div class="card with-photo">
               <div class="card-header">
-               <a target="_blank" href="<%= gadget.gg_url %>"><img src="<%= gadget.gg_img %>" alt=""></a>
+               <div class="home_img">
+                <a target="_blank" href="<%= gadget.gg_url %>"><img src="<%= gadget.gg_img %>" alt=""></a>
+               <div>
               </div>
               
               <section class="card-body">
