--- a/app/views/sdcategories/index.html.erb
+++ b/app/views/sdcategories/index.html.erb
@@ -28,6 +28,7 @@
         <% end %>
       </tbody>
     </table>
-    <%= link_to 'Back', storedeals_path %>
+    <a href="/storedeals">Back To Store Deals</a> |
+    <%= link_to 'Back', storedeals_path %> 
   </div>
 </div>
