--- a/app/assets/stylesheets/hotdeals.css
+++ b/app/assets/stylesheets/hotdeals.css
@@ -74,6 +74,7 @@
 .hotdeal_form .pricing div .promo_date{width:300px;}
 .hotdeal_form .form_btn input{margin-top:10px;background:#000;color:#fff;padding:15px 0;}
 .hotdeal_form .find_more div{float:left;width:48%;margin:0  1%;}
+.hotdeal_form .select em{display:inline-block;width:200px;}
 
 
 @media screen and (max-width:640px){
