--- a/app/views/storepromotions/index.html.erb
+++ b/app/views/storepromotions/index.html.erb
@@ -70,7 +70,7 @@
                   <% if storepromotion.sp_end_date.present? %>
                     <% if storepromotion.sp_spare_60 && (storepromotion.sp_spare_60 < DateTime.now) %>
                     <% storepromotion.sp_spare_60 %>
-                      <em class="expired code_em">This offer has EXPIRED</em>
+                      <em class="expired code_em">EXPIRED</em>
                     <% else %>
                       <% if storepromotion.sp_spare_61 && (storepromotion.sp_spare_61 <= DateTime.now) %>
                       <% storepromotion.sp_spare_61 %>
